[package]
name = "cjval_wasm"
version = "0.8.1"
edition = "2021"
repository = "https://github.com/cityjson/cjval_wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
parking_lot_core = "=0.8.0"
indexmap = "1.9.1"

[dependencies.cjval]
# version = "0.5.0"
git = "https://github.com/cityjson/cjval"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"